# Data_Visualisation

./: .pre-commit-config.yaml  ARTICLES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Data_Visualisation_Charts.ipynb  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml
apps/: streamlit_app.py
benchmarks/: benchmark_rendering.py
docs/: NOTEBOOK_INDEX.md  README.md  iris-eda-python-notebook.md  python-data-visualization-guide.md
examples/: gallery.py  geospatial.py  large_data.py
notebooks/: iris_eda_visualisation_articles.ipynb
src/dataviz_reference/: __init__.py  charts.py  interactive.py  theme.py
tests/: test_charts.py  test_interactive.py
