[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "data-visualisation-reference"
version = "1.0.0"
description = "Practical, reusable data visualisation patterns for analytical and production workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Saurav Singla" }]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.20",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36"]
large-data = ["datashader>=0.16", "pillow>=10.0"]
all = [
  "datashader>=0.16",
  "pillow>=10.0",
  "streamlit>=1.36",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mpl>=0.17",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataviz_reference"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dataviz_reference"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
