[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "data-visualisation-reference"
version = "1.0.0"
description = "Production-ready Python data visualization examples, reusable Matplotlib and Plotly APIs, Streamlit dashboards, geospatial charts, accessible themes, and large-data rendering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Saurav Singla" }]
keywords = [
  "data-visualization",
  "data-visualisation",
  "python-data-visualization",
  "matplotlib",
  "plotly",
  "streamlit",
  "seaborn",
  "datashader",
  "dashboard",
  "interactive-visualization",
  "exploratory-data-analysis",
  "eda",
  "iris-dataset",
  "uci-dataset",
  "jupyter-notebook",
  "geospatial-visualization",
  "choropleth",
  "large-data-visualization",
  "accessible-visualization",
  "statistical-graphics",
  "data-science",
  "analytics",
  "charting",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "plotly>=5.20",
  "seaborn>=0.13",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.36"]
large-data = ["datashader>=0.16", "pillow>=10.0"]
notebook = ["jupyterlab>=4.2", "scikit-learn>=1.4"]
all = [
  "datashader>=0.16",
  "jupyterlab>=4.2",
  "pillow>=10.0",
  "scikit-learn>=1.4",
  "streamlit>=1.36",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mpl>=0.17",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/sauravsingla/Data_Visualisation"
Repository = "https://github.com/sauravsingla/Data_Visualisation"
Documentation = "https://github.com/sauravsingla/Data_Visualisation#readme"
Gallery = "https://github.com/sauravsingla/Data_Visualisation/tree/master/examples"
Articles = "https://github.com/sauravsingla/Data_Visualisation/blob/master/ARTICLES.md"
Notebook = "https://github.com/sauravsingla/Data_Visualisation/blob/master/notebooks/iris_eda_visualisation_articles.ipynb"
Issues = "https://github.com/sauravsingla/Data_Visualisation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dataviz_reference"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["dataviz_reference"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]